--- a/public/package.json
+++ b/public/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "jquery": "^3.3.1",
     "trumbowyg": "^2.11.1"
   }
